# pixelated

./: .aider.chat.history.md  .aider.input.history  .aider.model.metadata.json  .aiignore  .astro-env.d.ts  .astrorc.js  .astrorc.json  .awsignore  .cache_ggshield  .checkov.yaml  .cipherrc  .clinerules  .cloudflareignore  .codexignore  .coveragerc  .cursorignore  .cursorrules  .dev.vars.example  .dockerignore  .dockerignore.azure  .env.example  .env.vault  .gitattributes  .gitignore  .gitlab-ci.final.yml  .gitlab-ci.yml  .gitlab-ci.yml.backup  .gitlab-ci.yml.bak  .gitmodules  .kilocodemodes  .kubectl-aliases.sh  .markdownlint.json  .markdownlintignore  .mcp.json  .npmrc  .nvmrc  .oracle_deployment  .oxfmtrc.jsonc  .oxlintignore  .oxlintrc.json  (+448 more)
.Jules/: palette.md
.agent/: implementation_plan.md  task.md
.amazonq/: mcp.json
.beads/: README.md  config.yaml  dolt-monitor.pid  metadata.json
.br/: config.json
.brv/: config.json
.circleci/: config.yml
.clinerules/: README.md  byterover-rules.md  clean-code.md  python-llm.md
.codacy/: codacy.yaml
.contextstream/: config.json
.cursor/: mcp.json  rclone.conf
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.errors/: .descriptions.xml  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  JSAnnotator.xml  JSUnusedGlobalSymbols.xml  index.html
.gemini/: BUILD_ISSUES_RESOLVED.md
.github/: SLACK_SETUP.md  copilot-instructions.md  dependabot.yml  lighthouse-budget.json  lighthouse-config.json
.jules/: bolt.md  palette.md  sentinel.md  type-1.md  type-2.md  type-3.md  type-4.md  type-5.md  type-6.md  type-7.md  type-8.md  type-all.md
.junie/: guidelines.md
.kilocode/: mcp.json
.kiro/: code-style.md  domain-emotional-ai.md  security-ethics.md
.memory/: 00-alpha.md  00-description.md  01-brief.md  20-system.md  30-tech.md  40-active.md  50-progress.md  60-decisions.md  65-phase1-execution-final-status.md  66-phase1-v5-success-completion.md  70-knowledge.md
.notes/: COMPLETION_SUMMARY.md  PR-CHECKLIST-dataset-expansion.txt  PR-COMMENT-dataset-expansion.txt  PR-DESCRIPTION-dataset-expansion.txt  PROJECT_STRUCTURE_CHECKLIST.md  Project_Architecture_Blueprint.md  bias-error.md  (+27 more)
mcp_server/: .env  .env.example  Dockerfile  SECURITY.md  __init__.py  app_factory.py  config.py  docker-compose.integration.yml  docker-compose.yml  exceptions.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_integration_simple.py  tmp_check_imports.py
mcp_server/api/: agent_handoff.py
mcp_server/auth/: __init__.py  dependencies.py
mcp_server/docker/grafana/: grafana.ini
mcp_server/docker/grafana/dashboards/: mcp-server-overview.json
mcp_server/docker/grafana/provisioning/dashboards/: dashboard.yml
mcp_server/docker/grafana/provisioning/datasources/: prometheus.yml
mcp_server/docker/nginx/: nginx.conf
mcp_server/docker/prometheus/: alert-rules.yml  prometheus.yml
mcp_server/docs/: dataset_integration_architecture.md  integration_deployment_guide.md  security_measures.md
mcp_server/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  request_id.py
mcp_server/models/: __init__.py  agent.py  agent_handoff.py  dataset.py  task.py
mcp_server/routers/: __init__.py  agents.py  byterover.py  dataset_websocket.py  health.py  pipeline_websocket.py  pipelines.py  tasks.py  websocket.py
mcp_server/services/: __init__.py  agent.py  agent_handoff_service.py  assignment.py  auth.py  dataset_integration.py  flask_integration.py  integration_manager.py  queue.py  security_lockdown.py  task.py  token_manager.py  websocket_asgi.py  websocket_manager.py
mcp_server/tests/: __init__.py  integration_test_runner.py  test_agent_handoff_service.py  test_integration_dataset_pipeline.py  test_integration_simple.py  test_integration_standalone.py  test_integration_websocket_flask.py  test_task_delegation.py  test_websocket_handlers.py  test_websocket_manager.py  test_websocket_router.py
mcp_server/utils/: security.py
src/lib/ai/bias-detection/python-service/: .env.example  Dockerfile  README.md  TODOs.md  bias_detection_service.py  bias_utils.py  celery_config.py  constraints-ci.txt  docker-compose.yml  performance_optimization.py  placeholder_adapters.py  pyproject.toml  real_ml_models.py  real_time_integration.py  requirements-nvidia.txt  requirements.txt  setup.bat  setup.sh  tasks.py  test_bias_detection_improvements.py  test_bias_detection_service.py  test_utils.py
src/lib/ai/bias-detection/python-service/bias_detection/: __init__.py  app.py  app_exceptions.py  bootstrap.py  config.py  deps.py  metrics.py  middleware.py  models.py  sentry_metrics.py
src/lib/ai/bias-detection/python-service/bias_detection/routers/: __init__.py  analytics.py  bias_analysis.py  errors.py  health.py  models_info.py
src/lib/ai/bias-detection/python-service/bias_detection/services/: __init__.py  analysis_orchestrator.py  bias_detection_service.py  cache_service.py  database_service.py  model_service.py  model_service.py.bak  nvidia_api_service.py
src/lib/ai/bias-detection/python-service/docs/: nvidia_api_integration.md
src/lib/ai/bias-detection/python-service/examples/: nvidia_api_example.py
src/lib/ai/bias-detection/python-service/tests/: test_bias_detection_service.py  test_nvidia_api_service.py
src/lib/ai/multimodal-bias-detection/python-service/: .env.example  Dockerfile  docker-compose.yml  preprocessing_pipeline.py  pyproject.toml
src/lib/ai/multimodal-bias-detection/python-service/multimodal_bias_detection/: app.py  config.py  models.py
src/lib/ai/multimodal-bias-detection/python-service/multimodal_bias_detection/services/: audio_service.py  vision_service.py
tools/gdrive-dataset-manager/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP.md  config.yaml  pyproject.toml
tools/gdrive-dataset-manager/.github/: pull_request_template.md
tools/gdrive-dataset-manager/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
tools/gdrive-dataset-manager/src/gdrive_dataset_manager/: __init__.py  auth.py  cli.py  config_manager.py  downloader.py  lister.py  uploader.py
(+6815 files in other folders)
