[project]
name = "pixelated"
version = "0.1.0"
description = "Pixelated Empathy - AI-powered bias detection and mental health platform"
authors = [
  { name = "Pixelated Empathy Team", email = "team@pixelatedempathy.com" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
  "flask",
  "flask-cors>=6.0.2", # Updated to latest secure version
  "pandas",
  "numpy",
  "scikit-learn",
  "pyjwt",
  "werkzeug>=3.1.4", # Fixes GHSA-hgf8-39gv-g3f2 (Windows special device names vulnerability)
  "fairlearn",
  "shap>=0.41.0",
  "lime",
  "spacy>=3.8.11", # Updated to latest secure version
  "nltk",
  "evaluate",
  "cryptography>=46.0.3", # Updated to latest secure version
  "requests>=2.32.4", # Fixes CVE-2024-47081 (.netrc credentials leak via malicious URLs)
  "python-dotenv>=1.2.1", # Updated to latest secure version
  "click<9.0",
  "numba>=0.56.0",
  "faiss-cpu>=1.11.0",
  "pytest-asyncio>=1.0.0",
  "flake8>=7.3.0",
  "matplotlib>=3.10.3",
  "mypy>=1.16.1",
  "psutil>=7.0.0",
  "chardet>=5.2.0",
  "pydub>=0.25.1",
  "sourcery>=1.37.0; sys_platform == 'darwin'",
  "pyarrow>=21.0.0",
  "hatch>=1.14.1",
  "textstat>=0.7.8",
  "isort>=6.0.1",
  "black>=25.12.0", # Updated to latest secure version
  "pytest-cov>=6.2.1",
  "seaborn>=0.13.2",
  "plotly>=6.2.0",
  "wandb>=0.21.1",
  # Training dependencies
  "datasets>=2.19.0",
  "sentencepiece>=0.2.0",
  "einops>=0.8.0",
  "sentence-transformers>=2.7.0", # For semantic similarity in deduplication
  # HuggingFace Hub
  "huggingface-hub>=0.24.0",
  "transformers>=4.35.0", # Required for dataset_pipeline training_runner
  "torch>=2.6.0,<3.0.0", # Fixes CVE-2025-32434 affecting versions ≤2.5.1
  "gguf>=0.10.0",
  "ruff>=0.12.5",
  "yamllint>=1.37.1",
  "textblob>=0.19.0",
  "omnara>=1.5.7",
  "sentry-sdk>=2.37.0",
  "openai>=1.107.2",
  "pytest>=8.4.2",
  "ffmpeg>=1.4",
  "s3cmd>=2.4.0",
  "authlib>=1.6.6", # Updated to latest secure version
  "motor>=3.7.1",
  "structlog>=25.4.0",
  "redis>=6.4.0",
  "bcrypt>=4.3.0",
  "email-validator>=2.3.0",
  "python-socketio>=5.14.0",
  "httpx>=0.28.1",
  "pyyaml>=6.0.3",
  "nbqa>=1.9.1",
  "neo4j~=6.0.2",
  # Security: Pin transitive dependencies to secure versions
  "fastmcp>=2.14.0", # Fixes GHSA-mxxr-jv3v-6pgc, GHSA-rj5c-58rq-j5g5 (updated to 2.14.0)
  "starlette>=0.49.1", # Fixes GHSA-7f5h-v6xp-fcq8
  "h11>=0.15.0",
  "keras>=3.12.0", # Fixes GHSA-mq84-hjqx-cwf2, GHSA-28jp-44vh-q42h
  "fonttools>=4.61.1", # Fixes GHSA-768j-98cg-p3fv (Arbitrary File Write and XML injection vulnerability, updated to 4.61.1)
  "mcp>=1.23.0", # Fixes GHSA-9h52-p55h-vw2f
  "urllib3>=2.6.2", # Fixes GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37 (CVE-2025-66418, CVE-2025-66471)
  # NVIDIA NeMo Data Designer for synthetic dataset generation
  "nemo-microservices[data-designer]>=1.0.0",
  "checkov>=3.0.34", # Keep compatible version (3.2.495 requires boto3==1.35.49)
  "kaggle>=1.8.2",
  "boto3>=1.40.75", # Keep compatible with checkov
  # Google Drive API for direct Drive-to-Drive transfers
  "google-api-python-client>=2.150.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
  "rich>=13.7.0",
  "ngcsdk>=4.10.0",
  "vicoa>=1.2.5",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-asyncio", "coverage"]
dev = ["black", "isort", "ruff", "mypy", "pyright"]

[project.scripts]
process-priority-5 = "ai.scripts.process_priority_5:main"

[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.38.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "stubs"
files = ["src", "tests", "ai", "api"]
show_error_codes = true

[tool.pyright]
include = ["src", "tests", "ai", "api"]
exclude = ["node_modules", "stubs", "venv", ".venv", "env", "build", "dist", ".coveragerc"]
extraPaths = ["stubs"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = false
reportMissingModuleSource = false
reportPrivateUsage = false
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["node_modules", "stubs", "venv", ".venv", "env", "build", "dist", ".coveragerc"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "C4",
  "DTZ",
  "PIE",
  "PT",
  "Q",
  "RET",
  "SIM",
  "T20",
  "TID",
  "ARG",
  "PL",
  "RUF",
]
ignore = ["E501", "UP017", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["ai", "src", "api"]
combine-as-imports = true
force-single-line = false

[tool.black]
target-version = ["py311"]
line-length = 100
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ai", "src", "api"]
combine_as_imports = true
force_single_line = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src", "ai", "api"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv.workspace]
members = [
    "./",
    "tools/gdrive-dataset-manager",
]

[tool.uv]
index-strategy = "unsafe-best-match"
concurrent-downloads = 1  # Download one package at a time for slower connections
# Note: Increase timeout via environment variable: UV_HTTP_TIMEOUT=300 uv sync

[tool.uv.sources.pytorch-cpu]
url = "https://download.pytorch.org/whl/cpu"

# Note: nvidia-nim and ngc-python-cli require NVIDIA NGC authentication
# Install them manually with: uv pip install --extra-index-url https://pypi.ngc.nvidia.com nvidia-nim ngc-python-cli
# After authenticating with your NGC API key

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pytest>=8.4.2",
]
