[project]
name = "unified-ai-dataset-pipeline"
version = "0.1.0"
dependencies = [
    "ray==2.9.0",
    "boto3==1.34.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pyarrow==15.0.0",
    "pydantic==2.7.0",
    "clickhouse-driver==0.2.7",
]
[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "black==24.3.0",
    "isort==5.13.2",
    "mypy==1.9.0",
    "ruff==0.2.0",
    "types-requests==2.31.0",
]