[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "1.0.0"
description = "Management Control Panel Server for AI Agent Orchestration"
authors = [{name = "Pixelated Team", email = "team@pixelatedempathy.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.12.15",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-socketio>=5.13.0",
    "redis>=6.4.0",
    "services>=0.1.1",
    "structlog>=25.4.0",
]

[project.urls]
Homepage = "https://pixelatedempathy.com"
Repository = "https://github.com/pixelated/mcp-server"
Documentation = "https://docs.pixelatedempathy.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mcp_server --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
