[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-detection-service"
version = "1.0.0"
description = "AI-powered bias detection service with TensorFlow/PyTorch integration"
authors = [{name = "Pixelated Team", email = "team@pixelatedempathy.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.4.0",
    "prometheus-client>=0.19.0",
    
    # AI/ML Dependencies
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.5.0",
    "fairlearn>=0.9.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "aif360>=0.5.0",
    "evaluate>=0.4.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "textblob>=0.17.0",
    
    # Database and Caching
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # HTTP client
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
    
    # Utilities
    "ulid-py>=1.1.0",
    "tenacity>=8.2.3",
    "celery>=5.3.0",
    "redis>=5.0.1",
]

[project.urls]
Homepage = "https://pixelatedempathy.com"
Repository = "https://github.com/pixelated/bias-detection-service"
Documentation = "https://docs.pixelatedempathy.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["bias_detection*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=bias_detection --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3