[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.38.1"]  # Fixes CVE-2024-6345, CVE-2025-47273, CVE-2022-40898
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-bias-detection-service"
version = "1.0.0"
description = "Multi-modal bias detection service for images, audio, and video content"
authors = [{name = "Pixelated Team", email = "team@pixelatedempathy.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.4.0",
    "prometheus-client>=0.19.0",
    
    # Sentry SDK for error tracking and metrics
    # Reference: https://docs.sentry.io/platforms/python/metrics/
    "sentry-sdk[fastapi]>=2.44.0",
    
    # Multi-modal AI Dependencies
    "torch>=2.8.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.8.0",
    "transformers>=4.30.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "moviepy>=1.0.3",
    
    # Vision Models
    "timm>=0.9.0",
    "open-clip-torch>=2.0.0",
    
    # Audio Processing
    "speechbrain>=0.5.0",
    "pyannote.audio>=2.1.0",
    
    # Database and Caching
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Utilities
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
    "ulid-py>=1.1.0",
    "tenacity>=8.2.3",
    "celery>=5.3.0",
    
    # Media Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Security: Pin transitive dependencies to secure versions
    "keras>=3.12.0",  # Fixes GHSA-mq84-hjqx-cwf2, GHSA-28jp-44vh-q42h
    "starlette>=0.49.1",  # Fixes GHSA-7f5h-v6xp-fcq8
    "werkzeug>=3.1.4",  # Fixes GHSA-hgf8-39gv-g3f2 (Windows special device names vulnerability)
    "fonttools>=4.61.0",  # Fixes GHSA-768j-98cg-p3fv (Arbitrary File Write and XML injection vulnerability)
    "urllib3>=2.6.2",  # Fixes GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37 (CVE-2025-66418, CVE-2025-66471)
]

[project.urls]
Homepage = "https://pixelatedempathy.com"
Repository = "https://github.com/pixelated/multimodal-bias-detection-service"
Documentation = "https://docs.pixelatedempathy.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["multimodal_bias_detection*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=multimodal_bias_detection --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3